// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.pruning.admin.v0;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message SetSchedule {
  message Request {
    PruningSchedule schedule = 1;
  }
  message Response {}
}

message GetSchedule {
  message Request {}
  message Response {
    PruningSchedule schedule = 1;
  }
}

message SetParticipantSchedule {
  message Request {
    ParticipantPruningSchedule schedule = 1;
  }
  message Response {}
}

message GetParticipantSchedule {
  message Request {}
  message Response {
    ParticipantPruningSchedule schedule = 1;
  }
}

message PruningSchedule {
  string cron = 1;
  google.protobuf.Duration max_duration = 2;
  google.protobuf.Duration retention = 3;
}

message ParticipantPruningSchedule {
  PruningSchedule schedule = 1;
  bool prune_internally_only = 2;
}

message ClearSchedule {
  message Request {}
  message Response {}
}

message SetCron {
  message Request {
    string cron = 1;
  }
  message Response {}
}

message SetMaxDuration {
  message Request {
    google.protobuf.Duration max_duration = 1;
  }
  message Response {}
}

message SetRetention {
  message Request {
    google.protobuf.Duration retention = 1;
  }
  message Response {}
}

message LocatePruningTimestamp {
  message Request {
    // the index to look up the offset for, needs to be 1 or larger
    // i.e. 1 for returning the first timestamp, 2 for the second timestamp etc
    int32 index = 1;
  }
  message Response {
    // optional, not set if less than `index` events exist
    google.protobuf.Timestamp timestamp = 1;
  }
}
